S&R: Fix searching in never saved files + multiplex using roles

The match data is now saved in column 0 with custom roles in stead of
using UserRole in many columns. The custom roles also have enums for
better readability.

BUG: 324924