addons/kate/search/SearchDiskFiles.h
@@ -51,7 +51,7 @@ public Q_SLOTS:
     void cancelSearch();
 
 Q_SIGNALS:
-    void matchFound(const QString &url, int line, int column,
+    void matchFound(const QString &url, const QString &docName, int line, int column,
                     const QString &lineContent, int matchLen);
     void searchDone();
     void searching(const QString &file);
